Alex's input - simplify the test by using ClassFileInstaller